# DynVision

./: .gitignore  .lore.md  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflow/: docs.yml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: README.md  code-of-conduct.md  contributing.md  getting-started.md  index.md  mkdocs.yml  requirements.txt  todo.md  todos.md
docs/development/: documentation-map.md  index.md  multi-gpu-imagenet-plan.md  python-3.12-compatibility.md  pytorch-lightning.md  research-software.md  snakemake.md  software-patterns.md  structure_strategy.md
docs/docs/: contributing.md  getting-started.md  index.md
docs/explanation/: biological-plausibility.md  comparison-to-neural-data.md  design-philosophy.md  engineering-vs-biological-time.md  index.md  role-of-recurrence.md  temporal_dynamics.md  why-snakemake.md
docs/overrides/: main.html
docs/reference/: benchmarking.md  configuration.md  dynamics-solvers.md  evaluation-metrics.md  index.md  integration-strategies.md  layer-operations.md  losses.md  model-architecture.md  model-base.md  model-components.md  models.md  optimizers-schedulers.md  organization.md  recurrence-types.md  skip-feedback-connections.md  test-data-processing.md  transform-configuration.md  workflow.md
docs/stylesheets/: diataxis.css
docs/tutorial/: basic-model-training.md  custom-model.md  index.md
docs/user-guide/: cluster-integration.md  custom-models.md  data-processing.md  evaluation.md  index.md  installation.md  model-testing.md  parameter-handling.md  temporal-data-presentation.md  torch-cluster-setup.md  training.md  troubleshooting.md  visualization.md  workflows.md
dynvision/: project_paths.py  temp.smk
dynvision/base/: __init__.py  coordination.py  lightning.py  monitoring.py  storage.py  temporal.py
dynvision/cluster/: README.md  _snakecharm.sh  clean_env_vars.sh  executor_wrapper.sh  setup_distributed_execution.sh  snakecharm.sh  snakejob.sh  snakejob_example.sh  vscode_job.sh
dynvision/configs/: README.md  config_data.yaml  config_defaults.yaml  config_experiments.yaml  config_modes.yaml  config_runtime.yaml  config_visualization.yaml  config_workflow.yaml  runtime_config.yaml
dynvision/data/: __init__.py  dataloader.py  datamodule.py  datasets.py  ffcv_dataloader.py  ffcv_datasets.py  ffcv_operations.py  get_data.py  get_mnist.py  jang_2021.py  noise.py  operations.py  sampler.py  transforms.py
dynvision/hyperparameters/: base_params.py  base_params_old.py  data_params.py  init_params.py  model_params.py  trainer_params.py  trainer_params_old.py  training_params.py
dynvision/losses/: __init__.py  activity_loss.py  base_loss.py  cross_entropy_loss.py  energy_loss.py  lr_scheduler.py  mean_squared_activation_loss.py  utils.py
dynvision/model_components/: __init__.py  base.py  bias.py  dynamics_solver.py  integration_strategy.py  layer_connections.py  lightning_base.py  recurrence.py  retina.py  supralinearity.py  topographic_recurrence.py
dynvision/models/: __init__.py  alexnet.py  blt.py  blt_vs.py  cordsnet.py  cordsnet_original.py  cornet.py  cornet_original.py  cornet_rt.py  dyrcnn.py  model_alexnet.py  model_bl_net.py  model_cordsnet.py  model_cornet_rt.py  model_cornet_z.py  model_four_layer_cnn.py  model_resnet.py  model_resnet18.py  model_two_layer_cnn.py  original_code_blt.py  resnet.py  resnetx3.py  run_cordsnet_original.py  run_cornet_original.py  test_weight_loading.py  utils.py  validate_cordsnet.py  validate_cornet.py
dynvision/modules/: __init__.py  dynamics_solver.py  layer_connections.py  lightning_base.py  recurrence.py  retina.py  spatial_base.py  supralinearity.py  topographic_recurrence.py
dynvision/params/: __init__.py  base_params.py  composite_params.py  data_params.py  init_params.py  mode_registry.py  model_params.py  testing_params.py  trainer_params.py  training_params.py
dynvision/processing/: aggregate_experiment_data.py  process_single_test.py  process_wandb_data.py
dynvision/runtime/: debug_ddp.py  init_model.py  test_model.py  train_model.py  train_model_old.py  train_model_oldold.py
gfx/: preliminary_results.xcf
manuscript/: main.tex
references/: dynamic_vision.bib  tinyimagenet_class_index.json  tinyimagenet_classes.json
tests/: test_filesystem_wildcards.py
(+134 files in other folders)
